Rest and ticket "animated" + real DFA implemented.

--- a/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1.csproj
+++ b/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1.csproj
@@ -62,6 +62,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="State.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -120,6 +121,10 @@
     <Resource Include="Assets\FivePLN.cur" />
     <Resource Include="Assets\OnePLN.cur" />
     <Resource Include="Assets\TwoPLN.cur" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\rest.png" />
+    <Resource Include="Assets\ticket.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
